--- a/package.json
+++ b/package.json
@@ -11,12 +11,14 @@
   "license": "ISC",
   "devDependencies": {
     "@types/express": "^4.17.13",
+    "@types/nodemailer": "^6.4.4",
     "prisma": "^3.13.0",
     "ts-node-dev": "^1.1.8",
     "typescript": "^4.6.4"
   },
   "dependencies": {
     "@prisma/client": "^3.13.0",
-    "express": "^4.18.1"
+    "express": "^4.18.1",
+    "nodemailer": "^6.7.5"
   }
 }
